cluster-state/trolle-talos/infra/kubescape-operator/templates/operator/admission-webhook/webhook.yaml
---
# Source: kubescape-operator/templates/operator/admission-webhook/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: kubescape-admission-webhook
  annotations:
    
  labels:
    helm.sh/chart: kubescape-operator-1.40.4
    app.kubernetes.io/name: kubescape-operator
    app.kubernetes.io/instance: kubescape
    app.kubernetes.io/component: operator
    app.kubernetes.io/version: "1.40.4"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubescape
    app: operator
    tier: ks-control-plane
    kubescape.io/ignore: "true"
webhooks:
  - name: validation.kubescape.admission
    clientConfig:
      service:
        name: kubescape-admission-webhook
        namespace: kubescape
        path: /validate
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIekNDQWdlZ0F3SUJBZ0lRT3NGR1k1WFZ3Si91NjVLQ1hpeUZNakFOQmdrcWhraUc5dzBCQVFzRkFEQWEKTVJnd0ZnWURWUVFEREE4cUxtdDFZbVZ6WTJGd1pTNXpkbU13SGhjTk1qWXhNREF6TVRNME5qTTNXaGNOTXpZdwpPVE13TVRNME5qTTNXakFhTVJnd0ZnWURWUVFEREE4cUxtdDFZbVZ6WTJGd1pTNXpkbU13Z2dFaU1BMEdDU3FHClNJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNubFVwYmhDRFRpUmJVSGYycURmMlNra1QrMjdQb013bXoKMlFwcFJMZjhINldaOW9CSnBIUC9CL2lydVBXSFlBaytVTW5WKzc1SXhJUlQ1Vm9oaDRlUEx4cWovZ0hUM2p5TQp6SHNwU0U4RGdB [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    rules:
      - operations: ["CREATE", "UPDATE", "DELETE", "CONNECT"]
        apiGroups: ["*"]
        apiVersions: ["v1"]
        resources: ["pods", "pods/exec", "pods/portforward", "pods/attach", "clusterrolebindings", "rolebindings"]
        scope: "*"
      - operations: ["CREATE"]
        apiGroups: ["networking.k8s.io"]
        apiVersions: ["v1"]
        resources: ["networkpolicies"]
        scope: "*"
    failurePolicy: Ignore
